[package]
name = "search-engine"
version = "0.1.0"
authors = ["Tianyao Chou <tianyaochou@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
rust-stemmers = "*"
rust_tokenizers = "*"
walkdir = "*"
stopwords = "*"
mailparse = "*"
rayon = "*"
crossbeam = "*"
priority-queue = "*"
sled = { version = "*", features = ["compression"] }
bincode = "*"
papyrus = "*"
text_io = "*"
serde = "*"
