[package]
name = "search-engine"
version = "0.1.0"
authors = ["Tianyao Chou <tianyaochou@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = { version = "0.19.0", features = ["lexer"] }

[dependencies]
clap = "*"
rust-stemmers = "*"
rust_tokenizers = "*"
walkdir = "*"
stopwords = "*"
mailparse = "*"
rayon = "*"
crossbeam = "*"
priority-queue = "*"
sled = { version = "*", features = ["compression"] }
bincode = "*"
text_io = "*"
serde = "*"
nom = "*"
ordered-float = "*"
lalrpop-util = "0.19.0"
regex = "1"